--- a/sample/neph.yml
+++ b/sample/neph.yml
@@ -11,19 +11,18 @@ main:
 sub0:
   command: |
     sleep 1
-    ls -la
-    sleep 0.8
-    sleep 1.2
-
-    sleep 3.2
+    sleep 1
+    sleep 1
+    sleep 1
+    sleep 1
+    sleep 1
   depends_on:
     sub0_1
   chdir:
     sample
 
 sub0_1:
-  command: |
-    ttttt
+  command:
     sleep 0.4
   ignore_error:
     true
