--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ before_deploy:
   - git diff
   - git add --all
   - git commit -m "[skip ci] bumped version ${GIT_TAG}"
-  - git push --quiet https://$GH_TOKEN@github.com/tbrand/neph.git master 2> /dev/null
-  - git tag $GIT_TAG -a -m "Release from travis: #${TRAVIS_BUILD_NUMBER}"
+  - git push https://$GH_TOKEN@github.com/tbrand/neph.git master
+  - git tag $GIT_TAG -a -m "Release from Travis CI for build #${TRAVIS_BUILD_NUMBER}"
   - git push --quiet https://$GH_TOKEN@github.com/tbrand/neph.git --tags 2> /dev/null
 deploy:
   provider: releases
