--- a/sample/neph.yml
+++ b/sample/neph.yml
@@ -1,3 +1,6 @@
+import:
+  sample/imported.yml
+
 main:
   command: |
     sleep 0.5
@@ -25,7 +28,7 @@ sub0_1:
 
 sub1:
   command:
-    invalid
+    sleep 0.1
   depends_on:
     - sub1_1
     - sub1_2
@@ -33,6 +36,8 @@ sub1:
 sub1_1:
   command:
     sleep 3.2
+  depends_on:
+    sub_imported
 
 sub1_2:
   command:
