Removed Ruby dependency. `neph -y sample/neph.yml`, and `crystal spec` failed, if the Ruby interpreter wasn't installed. This commit replaces Ruby with Crystal.

--- a/sample/neph.yml
+++ b/sample/neph.yml
@@ -58,7 +58,7 @@ print_result:
     echo "The result is $RESULT!"
   depends_on:
     -
-      job: ruby_job
+      job: crystal_eval_job
       env: RESULT
 
 hide_command:
@@ -68,6 +68,6 @@ hide_command:
   hide:
     true
 
-ruby_job:
+crystal_eval_job:
   command:
-    ruby -e 'print 1 + 5'
+    crystal eval 'print 1 + 5'
