--- a/spec/configs/output.yml
+++ b/spec/configs/output.yml
@@ -3,14 +3,14 @@ output:
     echo "The result is $RESULT"
   depends_on:
     -
-      job: run_ruby
+      job: run_crystal
       env: RESULT
     - job: just_echo2
     - just_echo
 
-run_ruby:
+run_crystal:
   command:
-    ruby -e "puts 1 + 3"
+    crystal eval "puts 1 + 3"
 
 just_echo:
   command:
