--- a/neph.yaml
+++ b/neph.yaml
@@ -16,3 +16,9 @@ test:
 man:
   command:
     go-md2man -in neph.1.md -out neph.1
+
+clean:
+  command:
+    rm -f bin/neph
+    rm -f neph.1
+    rm -fd bin
