--- a/shard.yml
+++ b/shard.yml
@@ -1,13 +1,13 @@
 name: neph
-version: 0.1.21
+version: 0.2.0
 
 authors:
   - Taichiro Suzuki <taichiro0709@gmail.com>
 
 targets:
     neph:
-      main: src/bin/neph_bin.cr
+      main: src/neph.cr
 
-crystal: 0.23.1
+crystal: 0.24.2
 
 license: MIT
