--- a/neph.yaml
+++ b/neph.yaml
@@ -1,25 +1,19 @@
 main:
-  depends_on:
+    dependencies:
     - man
     - binary
 
 binary:
-  command:
-    shards build --release
-  src:
-    - src/**/*.cr
-
-test:
-  command:
-    crystal spec
+  commands:
+    - shards build --release
 
 man:
   ignore_error: true
-  command:
-    go-md2man -in neph.1.md -out neph.1
+  commands:
+    - go-md2man -in neph.1.md -out neph.1
 
 clean:
-  command:
-    rm -f bin/neph
-    rm -f neph.1
-    rm -fd bin
+  commands:
+    - rm -f bin/neph
+    - rm -f neph.1
+    - rm -fd bin
