--- a/sample/outside_configuration.yaml
+++ b/sample/outside_configuration.yaml
@@ -1,4 +1,4 @@
 outside_job:
-  command: |
-    echo "This is outside job!!"
-    sleep 0.2
+  commands:
+    - echo "This is outside job!!"
+    - sleep 0.2
