--- a/sample/neph.yaml
+++ b/sample/neph.yaml
@@ -3,39 +3,45 @@ import:
   sample/outside_configuration.yaml
 
 main:
-  command: |
-    echo "This is a Main job!!"
-    echo "Main job depends on sub_job"
-    sleep 0.2
+  commands:
+    - echo "This is a Main job"
+    - echo "Main job depends on sub_job"
+    - sleep 0.2
   depends_on:
     sub_job
 
 sub_job:
-  command: |
-    echo "This is a sub job for main job"
-    echo "You can define multiple dependencies like this"
-    sleep 0.2
+  before:
+    - echo "This is before what I do"
+    - sleep 1
+  after:
+    - echo "This is after what I do"
+    - sleep 1
+  commands:
+    - echo "This is a sub job for main job"
+    - echo "You can define multiple dependencies like this"
+    - sleep 0.2
   depends_on:
     - sub_sub_job0
     - sub_sub_job1
 
 sub_sub_job0:
-  command: |
-    echo "Working on ./sample directory"
-    pwd
-    echo "Check the 'pwd' result at .neph/sub_sub_job0/log/log.out"
-    sleep 0.2
+  commands:
+    - echo "Working on ./sample directory"
+    - pwd
+    - echo "Check the 'pwd' result at .neph/sub_sub_job0/log/log.out"
+    - sleep 0.2
   dir:
     sample
   depends_on:
     - hide_command
 
 sub_sub_job1:
-  command: |
-    echo "This job raises an error since 'hoge' command doesn't exist"
-    echo "But job will proceed since the error will be ignored"
-    sleep 0.2
-    hoge
+  commands:
+    - echo "This job raises an error since 'hoge' command doesn't exist"
+    - echo "But job will proceed since the error will be ignored"
+    - sleep 0.2
+    - hoge
   ignore_error:
     true
   depends_on:
@@ -43,31 +49,31 @@ sub_sub_job1:
     - print_result
 
 specify_sources:
-  command: |
-    echo "This job will not be triggered if the sources are not updated"
-    echo "The feature is inspired by make command"
-    echo "'outside_job' is defined at sample/outside_configuration.yaml"
-    sleep 0.2
+  commands:
+    - echo "This job will not be triggered if the sources are not updated"
+    - echo "The feature is inspired by make command"
+    - echo "'outside_job' is defined at sample/outside_configuration.yaml"
+    - sleep 0.2
   src:
     - src/**/*.cr
   depends_on:
     outside_job
 
 print_result:
-  command:
-    echo "The result is $RESULT!"
+  commands:
+    - echo "The result is $RESULT"
   depends_on:
     -
       job: crystal_eval_job
       env: RESULT
 
 hide_command:
-  command: |
-    sleep 1
-    echo "Can you see me?"
+  commands:
+    - sleep 1
+    - echo "Can you see me?"
   hide:
     true
 
 crystal_eval_job:
-  command:
-    crystal eval 'print 1 + 5'
+  commands:
+    - crystal eval 'print 1 + 5'
