--- a/spec/configs/ignore_error.yaml
+++ b/spec/configs/ignore_error.yaml
@@ -1,12 +1,12 @@
 
 ignore0:
-  command:
-    echo "OK"
+  commands:
+    - echo "OK"
   depends_on:
     ignore1
 
 ignore1:
-  command:
-    hogehoge
+  commands:
+    - hogehoge
   ignore_error:
     true
